Adds scripted settings